移除sso 优化多租户，优化项目架构
